--- a/app/src/main/res/layout/fragment_text_question.xml
+++ b/app/src/main/res/layout/fragment_text_question.xml
@@ -4,15 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     tools:context="com.kodbale.dkode.Fragments.TextQuestion">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:id="@+id/display_question"
         tools:text="Dummy text"
-        android:layout_marginTop="16dp"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:textAlignment="center"
         />
+    </RelativeLayout>
 
 </FrameLayout>
