--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,19 @@
     tools:context="com.kodbale.dkode.MainActivity">
 
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="06:00"
+        android:id="@+id/timer"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/timer">
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/dumm"
@@ -36,5 +48,6 @@
         android:layout_height="match_parent"
         android:layout_above="@id/dumm"
         android:id="@+id/frame"></FrameLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
