--- a/app/src/main/res/layout/fragment_pic.xml
+++ b/app/src/main/res/layout/fragment_pic.xml
@@ -5,9 +5,11 @@
     tools:context="com.kodbale.dkode.Fragments.PicFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/setImageQ"
+        android:src="@mipmap/ic_launcher_round"
+        />
 
 </FrameLayout>
