--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:layout_marginBottom="100dp"
         android:orientation="vertical"
         >
+
         <EditText
             android:id="@+id/group_id"
             android:layout_width="match_parent"
@@ -22,6 +23,7 @@
             android:layout_marginBottom="20dp"
             android:hint="Group ID"
             android:inputType="text"
+            android:text="sagar@a.com"
             android:textAlignment="center" />
 
         <EditText
@@ -31,6 +33,7 @@
             android:layout_below="@id/group_id"
             android:hint="Passcode"
             android:inputType="textPassword"
+            android:text="sagarsagar"
             android:textAlignment="center" />
 
     </LinearLayout>
