--- a/app/src/main/res/layout/activity_buffer.xml
+++ b/app/src/main/res/layout/activity_buffer.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="@dimen/dopeMargin"
+
     android:layout_height="match_parent"
+    android:background="@drawable/elogin"
     tools:context="com.kodbale.dkode.activities.BufferActivity">
 
     <Button
@@ -12,18 +13,18 @@
         android:layout_height="wrap_content"
         android:id="@+id/nextPageButton"
         style="@style/buttonStyle"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="150dp"
         android:text="Start the Game"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_marginBottom="40dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        style="@style/textStyle"
         android:text="Welcome to Enigma"
         android:id="@+id/message"
-
+        android:layout_marginBottom="30dp"
         android:layout_above="@id/nextPageButton"/>
 
 
