--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tools"
-        android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>
+        app:titleTextColor="@color/white"
+        app:title="Information"
+        android:background="@color/colorPrimaryDark" />
 
 </RelativeLayout>
