--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tools"
-        android:background="@color/colorPrimary" />
+        app:titleTextColor="@color/white"
+        app:title="My Score"
+        android:background="@color/colorPrimaryDark" />
     <ListView
         android:layout_width="match_parent"
         android:layout_below="@+id/tools"
