--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,15 +3,22 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
 
     <style name="buttonStyle" parent="AppTheme">
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+
+    <style name="textStyle" parent="AppTheme">
+        <item name="android:fontFamily">serif-monospace</item>
+        <item name="android:includeFontPadding">true</item>
+        <item name="android:textAppearance">@style/Base.TextAppearance.AppCompat.Large</item>
     </style>
 
 </resources>
