--- a/app/src/main/res/layout/activity_buffer.xml
+++ b/app/src/main/res/layout/activity_buffer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
 
     android:layout_height="match_parent"
-    android:background="@drawable/elogin"
+    android:background="@drawable/enigma_buffer"
     tools:context="com.kodbale.dkode.activities.BufferActivity">
 
     <Button
@@ -13,8 +13,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/nextPageButton"
         style="@style/buttonStyle"
+
+        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="150dp"
+        android:layout_marginBottom="50dp"
+        android:layout_margin="10dp"
         android:text="Start the Game"/>
 
     <TextView
@@ -24,6 +27,7 @@
         style="@style/textStyle"
         android:text="Welcome to Enigma"
         android:id="@+id/message"
+        android:textColor="@color/white"
         android:layout_marginBottom="30dp"
         android:layout_above="@id/nextPageButton"/>
 
