--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/enigma_buffer"
+    android:background="@drawable/wallpaper"
     android:padding="32dp"
     tools:context="com.kodbale.dkode.activities.EndingActivity">
 
@@ -23,10 +23,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/ByeBye"
         style="@style/textStyle"
-        android:textColor="@color/white"
+        android:textStyle="bold"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:text="Game has ended mate!"
-        android:layout_centerInParent="true"
+       android:layout_above="@id/btn"
+        android:layout_marginBottom="30dp"
         android:textAlignment="center"/>
 
     <Button
@@ -34,7 +35,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/scoreBtn"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="40dp"
         android:text="See Scores"
         style="@style/buttonStyle"
         />
