--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,9 +5,21 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:background="@drawable/enigma_splash_screen"
+    android:background="@drawable/wallpaper"
     tools:context="com.kodbale.dkode.activities.SplashActivity">
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:fontFamily="serif-monospace"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textSize="30sp"
+        android:text="E.N.I.G.M.A"/>
 
 
     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
