--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#51425f</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorPrimaryDark">#0df7f3</color>
+    <color name="colorAccent">#dc0909</color>
     <color name="white">#FFFFFF</color>
 </resources>
