--- a/app/src/main/res/layout/activity_buffer.xml
+++ b/app/src/main/res/layout/activity_buffer.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
 
+    android:padding="20dp"
     android:layout_height="match_parent"
-    android:background="@drawable/wallpaper"
+    android:background="@color/colorPrimary"
     tools:context="com.kodbale.dkode.activities.BufferActivity">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="240dp"
+        android:contentDescription="Enigma Logo"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/enigma_logo"
+        android:layout_marginBottom="24dp"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -26,6 +35,9 @@
         android:textAlignment="center"
         style="@style/textStyle"
         android:textStyle="bold"
+        android:textSize="30dp"
+        android:textColor="@color/white"
+        android:layout_centerInParent="true"
         android:text="Welcome to Enigma"
         android:id="@+id/message"
         android:layout_marginBottom="30dp"
