--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,73 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wallpaper"
+    android:background="@color/colorPrimary"
+    android:fitsSystemWindows="true"
     tools:context="com.kodbale.dkode.login.LoginActivity">
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:id="@+id/Welcome"
-        android:layout_above="@id/temp"
-        android:textAlignment="center"
-        android:layout_margin="15dp"
-        android:fontFamily="serif-monospace"
-        android:textStyle="bold"
-        android:text="E.N.I.G.M.A - L.O.G.I.N"/>
 
     <LinearLayout
         android:id="@+id/temp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_above="@id/loginButton"
-        android:layout_marginBottom="70dp"
+        android:paddingTop="56dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
         android:orientation="vertical"
         >
-        <EditText
-            android:id="@+id/group_id"
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:src="@drawable/enigma_logo"
+            android:layout_marginBottom="24dp"
+            android:layout_gravity="center_horizontal"/>
+
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:hint="Group ID"
-            android:inputType="text"
-            android:text="sagar@a.com"
-            android:textAlignment="center" />
+            android:layout_marginTop="8dp"
+            android:textColorHint="@color/white"
+            android:layout_marginBottom = "8dp" >
 
+            <EditText
+            android:id="@+id/group_id"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:hint="Group ID"
+            android:inputType="textEmailAddress"
+            android:text="sagar@a.com"
+            />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColorHint="@color/white"
+            android:layout_marginBottom = "8dp" >
         <EditText
             android:id="@+id/group_pass"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_below="@id/group_id"
             android:hint="Passcode"
             android:inputType="textPassword"
             android:text="sagarsagar"
-            android:textAlignment="center" />
+            />
+        </android.support.design.widget.TextInputLayout>
 
-    </LinearLayout>
 
-    <Button
+
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/loginButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        android:textColor="@color/white"
         style="@style/buttonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:padding="12dp"
+        android:text="Login"/>
+        />
 
-        android:text="Let's Go"
-       />
+        <TextView android:id="@+id/link_signup"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:textColor="@color/white"
+            android:text="Didn't get a ticket?, get one..."
+            android:gravity="center"
+            android:textSize="16dip"/>
 
-    <ProgressBar
-        android:id="@+id/loginProgress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/loginButton"
-        android:visibility="gone"
-        android:layout_marginBottom="30dp"
-         />
-</RelativeLayout>
+        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progress"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"/>
+    </LinearLayout>
+</ScrollView>
