--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,8 @@
     </style>
 
     <style name="buttonStyle" parent="AppTheme">
-        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/colorPrimaryDarker</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
