--- a/app/src/main/res/layout/activity_buffer.xml
+++ b/app/src/main/res/layout/activity_buffer.xml
@@ -47,7 +47,7 @@
         android:id="@+id/loadingDataProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/loginButton"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
         android:visibility="gone" />
 </RelativeLayout>
