--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="50dp"
-        android:onClick="onScoreButtonPressed"
+        android:onClick="onScoreButtonClicked"
         android:text="See Scores" />
 
 
