--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -36,38 +36,17 @@
         android:textColor="@color/white"
         android:layout_marginBottom="30dp"
         android:textAlignment="center"/>
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_below="@id/ByeBye"
         android:id="@+id/ByeByeBye"
+        android:text="These scores are tenative, final results may vary."
+        android:textColor="@color/white"
+        android:layout_marginBottom="9dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content" />
 
-        style="@style/textStyle"
-        android:textStyle="bold"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:text="Your final Score :"
-        android:textColor="@color/white"
-        android:layout_marginBottom="30dp"
-        android:textAlignment="center"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/textStyle"
-            android:textStyle="bold"
-            android:id="@+id/finalScoreHolder"
-            android:layout_centerInParent="true"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:text="102"
-            android:textColor="@color/white"
-            android:layout_marginBottom="30dp"
-            android:textAlignment="center"/>
-
-    </LinearLayout>
     <Button
         android:id="@+id/scoreBtn"
         style="@style/buttonStyle"
