--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="06:00"
         android:layout_below="@id/tools"
         android:id="@+id/timer"
+        android:visibility="gone"
         android:textAlignment="center"
         style="@style/textStyle"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
